# tg_dgn_bot_v2

./: .coveragerc  .env.example  .gitignore  .markdownlint.json  .renderignore  AGENTS.md  CHANGELOG.md  Dockerfile  Dockerfile.render  MIGRATION_PLAN.txt  README.md  alembic.ini  cspell.json  docker-compose.yml  pyproject.toml  pytest.ini  render.yaml  requirements.txt
.cunzhi-memory/: context.md  metadata.json  patterns.md  preferences.md
.github/workflows/: ci.yml
docs/: ADMIN_PANEL_GUIDE.md  AGENT_RULES.md  API_REFERENCE.md  BOT_ARCHITECTURE.md  CLEANUP_COMPLETED_2025-11-26.md  CLEANUP_SUMMARY.md  CODE_AUDIT_GUIDE.md  CODE_REVIEW_REPORT.md  CURRENT_STATUS.md  DATABASE_SCHEMA.md  DEPLOYMENT.md  ENERGY.md  FREE_CLONE.md  HELP_SYSTEM_GUIDE.md  MANUAL_TEST_GUIDE.md  MIGRATION_GUIDE.md  NAVIGATION_SYSTEM_IMPLEMENTATION.md  NEW_ARCHITECTURE.md  PAYMENT_MODES.md  PRODUCTION_ARCHITECTURE_COMPLETE.md  PRODUCTION_INSTALL.md  QUICK_REFERENCE.md  QUICK_START.md  RENDER_DEPLOYMENT.md  TRX_EXCHANGE_STANDARDIZATION_PLAN.md  TRX_EXCHANGE_USER_GUIDE.md  UNIFIED_TOOLS_DISCOVERY.md  ZEABUR_STAGING_DEPLOY.md  an_luoji.md  schema.sql
docs/archive/: ADMIN_PANEL_IMPLEMENTATION.md  ADMIN_PANEL_LIVE_TEST_GUIDE.md  ADMIN_PANEL_TEST_REPORT.md  BOT_FUNCTIONALITY_TEST_REPORT.md  BOT_MENU_BUTTONS.md  BUTTON_FIX_REPORT.md  CHANGELOG.md  CLEANUP_PLAN_2025-11-26.md  CLEANUP_REPORT_20241124.md  CLEANUP_SUMMARY.md  CODE_REVIEW_STAGE1_2.md  CODE_REVIEW_STAGE3_4.md  CURRENT_STATUS_2025-11-26.md  ENERGY_COMPLETION_REPORT.md  FIXES_REPORT_FINAL.md  FIX_PLAN.md  FIX_REPORT_20241124.md  IMPLEMENTATION_SUMMARY.md  ISSUE5_SUMMARY.md  ISSUE6_TRX_EXCHANGE_SUMMARY.md  P0_P1_FIXES_SUMMARY.md  PHASE1_IMPLEMENTATION_SUMMARY.md  PREMIUM_FIX_PLAN_20241124.md  QUICK_TEST.md  (+10 more)
migrations/: env.py  script.py.mako
scripts/: audit.ps1  audit.sh  backup_dbs.py  cleanup_database.py  diagnose_bot_issues.py  diagnose_premium_issues.py  fix_cancel_handlers.py  init_admin_config.py  init_content_configs.py  inspect_db_schemas.py  start_architecture_migration.py  start_bot.sh  stop_bot.sh  validate_config.py
src/: __init__.py  bot_v2.py  config.py  database.py  health.py  models.py  render_entrypoint.py  signature.py  webhook.py
tests/: __init__.py  conftest.py  debug_parser.py  migration_analysis_output.txt  test_address_query_conversation.py  test_address_query_module.py  test_address_query_rate_limit.py  test_address_query_standard.py  test_address_validator.py  test_admin_callback_fix.py  test_admin_content.py  test_admin_module_migration.py  test_admin_panel_integration.py  test_admin_permission.py  test_all_buttons_complete.py  test_all_modules_standardization.py  test_amount_calculator.py  test_back_to_main_navigation.py  test_bot_functionality.py  test_bot_lifecycle.py  test_bot_navigation_integration.py  test_bot_v2.py  test_button_coverage.py  test_code_review_issues.py  test_complete_navigation_ci.py  test_connection.py  test_core_infrastructure.py  test_database_context_manager.py  test_database_init.py  test_deposit_callback.py  test_energy_api.py  test_energy_direct.py  test_energy_integration.py  test_energy_module.py  test_energy_standard.py  test_energy_sync.py  test_error_handler.py  test_explorer_links.py  test_free_clone.py  test_health.py  (+48 more)
(+187 files in other folders)
