# ============================================
# tg_dgn_bot_v2 项目配置文件
# ============================================

[project]
name = "tg_dgn_bot_v2"
version = "2.0.2"
description = "TRON 生态 Telegram Bot - Premium会员/能量兑换/TRX闪兑/地址查询"
requires-python = ">=3.11"

# ========== Ruff 代码风格检查 ==========
[tool.ruff]
# 目标 Python 版本
target-version = "py311"
# 行长度限制
line-length = 120
# 检查范围
include = ["src/**/*.py"]
# 排除目录
exclude = [
    ".git",
    ".venv",
    "__pycache__",
    "migrations/versions/*.py",  # Alembic 迁移脚本有特殊格式
    "htmlcov",
    "*.pyc",
]

[tool.ruff.lint]
# 启用的规则集
select = [
    "E",      # pycodestyle 错误
    "W",      # pycodestyle 警告
    "F",      # Pyflakes
    "I",      # isort 导入排序
    "B",      # flake8-bugbear
    "C4",     # flake8-comprehensions
    "UP",     # pyupgrade
    "SIM",    # flake8-simplify
    "RUF",    # Ruff 特有规则
]
# 忽略的规则
ignore = [
    "E501",   # 行过长（使用 line-length 控制）
    "B008",   # 函数参数默认值问题（Depends 等）
    "B904",   # raise from（兼容性考虑）
    "SIM108", # 三元表达式（可读性优先）
    "RUF012", # 可变类默认值（Pydantic 模型需要）
]
# 可自动修复的规则
fixable = ["ALL"]
unfixable = []

[tool.ruff.lint.per-file-ignores]
# 测试文件允许更宽松的规则
"tests/**/*.py" = ["B", "SIM"]
# __init__.py 允许未使用导入（re-export）
"**/__init__.py" = ["F401"]

[tool.ruff.lint.isort]
# 导入排序配置
known-first-party = ["src"]
force-single-line = false
lines-after-imports = 2

# ========== MyPy 静态类型检查 ==========
[tool.mypy]
python_version = "3.11"
# 检查范围
files = ["src"]
# 忽略缺失导入（第三方库类型存根）
ignore_missing_imports = true
# 不检查未类型化的函数定义（渐进式类型化）
disallow_untyped_defs = false
# 检查未类型化的调用
disallow_untyped_calls = false
# 警告冗余类型转换
warn_redundant_casts = true
# 警告未使用的忽略注释
warn_unused_ignores = true
# 显示错误代码
show_error_codes = true
# 排除目录
exclude = [
    "migrations/",
    "tests/",
    "scripts/",
]

# 特定模块配置
[[tool.mypy.overrides]]
module = [
    "telegram.*",
    "httpx.*",
    "redis.*",
    "apscheduler.*",
    "structlog.*",
    "loguru.*",
    "prometheus_client.*",
    "slowapi.*",
    "pybreaker.*",
    "streamlit.*",
    "plotly.*",
    "pandas.*",
    "arq.*",
    "tenacity.*",
    "fakeredis.*",
]
ignore_missing_imports = true

# ========== Bandit 安全扫描 ==========
[tool.bandit]
# 检查范围
targets = ["src"]
# 排除目录
exclude_dirs = ["tests", "migrations", "scripts", ".venv"]
# 跳过的规则
skips = [
    "B101",  # assert 使用（测试中常见）
    "B311",  # random 模块（非加密场景）
]
# 严重级别阈值
severity = "low"
confidence = "low"

# ========== Pytest 配置 ==========
[tool.pytest.ini_options]
# 保持与 pytest.ini 同步
asyncio_mode = "auto"
asyncio_default_fixture_loop_scope = "function"
testpaths = ["tests"]
addopts = "-v --strict-markers --tb=short"
markers = [
    "redis: 标记需要 Redis 服务器的测试",
    "asyncio: 标记异步测试",
    "integration: 标记集成测试",
    "timeout: 标记测试超时时间",
]
filterwarnings = [
    "ignore::telegram.warnings.PTBUserWarning",
]

# ========== Coverage 覆盖率配置 ==========
[tool.coverage.run]
source = ["src"]
branch = true
omit = [
    "src/__pycache__/*",
    "migrations/*",
]

[tool.coverage.report]
exclude_lines = [
    "pragma: no cover",
    "def __repr__",
    "raise NotImplementedError",
    "if TYPE_CHECKING:",
    "if __name__ == .__main__.:",
]
show_missing = true

